deploy/apps/cortex/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortex
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cortex
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
